--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="nav">
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/" class="nav-link w-nav-link">Beranda</a
-            ><a href="/#Tampilan" class="nav-link w-nav-link">Tampilan Media</a
+            ><a href="#Tampilan" class="nav-link w-nav-link">Tampilan Media</a
             ><a href="/#Materi" class="nav-link w-nav-link"
               >Materi Yang Diajarkan</a
             ><a href="artstr/story.html" class="nav-button w-button"
