--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         </div>
         <div class="nav">
           <nav role="navigation" class="nav-menu w-nav-menu">
-            <a href="/" class="nav-link w-nav-link">Beranda</a
-            ><a href="#Tampilan" class="nav-link w-nav-link">Tampilan Media</a
-            ><a href="/#Materi" class="nav-link w-nav-link"
+            <a href="https://mdanilefendi.github.io/SKRFinalv1.0" class="nav-link w-nav-link">Beranda</a
+            ><a href="https://mdanilefendi.github.io/SKRFinalv1.0/#Tampilan" class="nav-link w-nav-link">Tampilan Media</a
+            ><a href="https://mdanilefendi.github.io/SKRFinalv1.0/#Materi" class="nav-link w-nav-link"
               >Materi Yang Diajarkan</a
             ><a href="artstr/story.html" class="nav-button w-button"
               >Mulai Belajar!</a
@@ -448,9 +448,9 @@
         >
           <div class="block-footer">
             <div class="subtitle-footer">MENU</div>
-            <a href="/" class="link-footer">Beranda</a
-            ><a href="/#Tampilan" class="link-footer">Tampilan Media</a
-            ><a href="/#Cara" class="link-footer">Cara Penggunaan</a>
+            <a href="https://mdanilefendi.github.io/SKRFinalv1.0" class="link-footer">Beranda</a
+            ><a href="https://mdanilefendi.github.io/SKRFinalv1.0/#Tampilan" class="link-footer">Tampilan Media</a
+            ><a href="https://mdanilefendi.github.io/SKRFinalv1.0/#Materi" class="link-footer">Materi Yang Diajarkan</a>
           </div>
         </div>
         <div
