--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
           Media Pembelajaran Pemrograman Terstruktur. <br />
           Dibuat dengan ❤️ oleh
           <a
-            href="https://webflow.com/"
+            href="https://www.instagram.com/mdanilefendi/"
             target="_blank"
             class="link-footer-down"
             >Mohamad Danil Efendi</a
