--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
               href="https://www.linkedin.com/in/mdanilefendi"
               class="link-footer"
               >Linkedin</a
-            ><a href="https://github.com/mdanilefendi" class="link-footer"
-              >Github</a
             ><a href="https://twitter.com/pangpangaje" class="link-footer"
               >Twitter</a
+            ><a href="https://www.instagram.com/mdanilefendi" class="link-footer"
+              >Instagram</a
             >
           </div>
         </div>
@@ -476,7 +476,7 @@
           Media Pembelajaran Pemrograman Terstruktur. <br />
           Dibuat dengan ❤️ oleh
           <a
-            href="https://www.instagram.com/mdanilefendi/"
+            href=""
             target="_blank"
             class="link-footer-down"
             >Mohamad Danil Efendi</a
